# manual-render

./: .gitignore  Makefile  README.md  fps.py  main.c  main.py  projection.py  pyproject.toml  rasterization.py  simple_camera_test.py  toyx11  vector_math.py
.cache/clangd/index/: main.c.4BF17B7FC0A8282A.idx
html/: index.html
