[project]
name = "manual-render"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.4.0",
    "numpy>=2.3.2",
    "pygame>=2.6.1",
    "pyqt5>=5.15.11",
    "pysdl2>=0.9.17",
    "pysdl2-dll>=2.32.0",
    "watchdog>=6.0.0",
    "watchfiles>=1.1.0",
]
